--- a/spring-boot-starter-vertx-caller/pom.xml
+++ b/spring-boot-starter-vertx-caller/pom.xml
@@ -49,6 +49,12 @@
       <artifactId>fastjson</artifactId>
       <version>1.2.33</version>
     </dependency>
+    <!-- https://mvnrepository.com/artifact/com.esotericsoftware/kryo -->
+    <dependency>
+      <groupId>com.esotericsoftware</groupId>
+      <artifactId>kryo</artifactId>
+      <version>4.0.0</version>
+    </dependency>
 
   </dependencies>
 
